# Esper-Email-Swarm

./: CHANGELOG.md  GITHUB_DEPLOYMENT.md  INDEX.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  REFACTORED_PACKAGE_READY.md  V2_DEPLOYMENT_GUIDE.md  V2_SUMMARY.md  VALIDATION_REPORT.md  esper_email_swarm.py  pyproject.toml  requirements.txt  test_output.json  validation_business.json  validation_newsletter.json
esper-email-swarm/: __init__.py  agents.py  cli.py  imap_client.py  model.py  processor.py  router.py
examples/: important_business.eml  newsletter.eml
refactored/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  INDEX.md  README-NEW.md  README.md  esper_email_swarm.py  pyproject.toml  requirements.txt  run_tests.py
refactored/esper-email-swarm/: __init__.py  agents.py  cli.py  imap_client.py  model.py  router.py
refactored/examples/: reference_github.eml  urgent_personal.eml
refactored/tests/: test_agents.py  test_router.py
tests/: __init__.py  test_agents.py  test_router.py
