[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esper-email-swarm"
version = "2.0.0"
description = "Semantic email management using VSE protocol and PICTOGRAM-256"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "John Panic", email = "john@pictogram.org"}
]
keywords = [
    "email",
    "semantic-ai",
    "vse-protocol",
    "pictogram-256",
    "ai-explainability",
    "nlp",
    "email-management",
    "semantic-routing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.8"
dependencies = []  # No external dependencies! Uses only stdlib

[project.urls]
Homepage = "https://github.com/PaniclandUSA/Esper-Email-Swarm"
Repository = "https://github.com/PaniclandUSA/Esper-Email-Swarm"
Documentation = "https://github.com/PaniclandUSA/Esper-Email-Swarm/blob/main/README.md"
"Bug Tracker" = "https://github.com/PaniclandUSA/Esper-Email-Swarm/issues"

[project.scripts]
esper-email = "esper_email_swarm.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[tool.setuptools]
packages = ["esper_email_swarm"]

[tool.setuptools.package-data]
esper_email_swarm = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=esper_email_swarm",
    "--cov-report=term-missing",
    "--cov-report=html",
]
